# FastApiProject

./: .env  base.py  main.py  pyproject.toml  settings.py
core/: db.py
managers/: auth.py
migrations/: env.py
migrations/versions/: 62c7ff27544d_00001.py  a8a9e5f10f46_000001.py  cc5c46093717_000003.py
models/: models.py
shcemas/: shemas.py
views/: auth.py  views.py
