[tool.poetry]
name = "challenge-fastapi"
version = "0.1.0"
description = ""
authors = ["zhanyl <kasymkulovajanylai@gmail.com>"]
readme = "README.md"
packages = [{include = "challenge_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
